save DB change, New project (clicklink)

--- a/Sources/VSW.Website/Content/plugins/adidas-pack/css/megamenu.css
+++ b/Sources/VSW.Website/Content/plugins/adidas-pack/css/megamenu.css
@@ -44,7 +44,7 @@ background:none;}
 .skyblue,.skyblue>li.showhide{
 }
 	
-.skyblue li>a,.skyblue>li.showhide span{color:#fff}
+.skyblue li>a,.skyblue>li.showhide span{color:#777}
 .skyblue>li:hover>a,.skyblue .dropdown li:hover>a{color:#555; background:#ffffff;}
 skyblue .megapanel img:hover,.skyblue form.contact input[type="text"]:focus,.skyblue form.contact textarea:focus{}
 .skyblue form.contact input[type="submit"]{background:#00405d;text-transform:uppercase;}
