--- a/Sources/VSW.Website/Content/plugins/adidas-pack/css/style.css
+++ b/Sources/VSW.Website/Content/plugins/adidas-pack/css/style.css
@@ -3124,4 +3124,4 @@ p.cart a:hover {
 	}
 }			
 .banner-slide .carousel-caption{bottom: 0px; padding-top: 0px !important; padding-bottom: 0px !important;}
-.background-color{background-color:#003366;}
+.background-color{background-color:#f8f8f8;}
